# valgo-lang

./: .clangd  .gitignore  CMakeLists.txt  example-program.valgo
antlr4-runtime/: CMakeLists.txt  README.md  deploy-macos.sh  deploy-source.sh
antlr4-runtime/runtime/src/atn/: PredicateTransition.h
src/: main.cpp  test-parser.cpp
src/codegen/: codegen.cpp
src/grammar/: Valgo.g4
src/parser/: AST.cpp  AST.h  ASTBuilderVisitor.cpp  ASTBuilderVisitor.h  README.md  Valgo.g4  Valgo.interp  Valgo.tokens  ValgoAST.h  ValgoASTBuilderVisitor.cpp  ValgoASTBuilderVisitor.h  ValgoBaseListener.cpp  ValgoBaseListener.h  ValgoBaseVisitor.cpp  ValgoBaseVisitor.h  ValgoLexer.cpp  ValgoLexer.h  ValgoLexer.interp  ValgoLexer.tokens  ValgoListener.cpp  ValgoListener.h  ValgoParser.cpp  ValgoParser.h  ValgoVisitor.cpp  ValgoVisitor.h
test/: example_program.valgo  test_codegen.cpp  test_parser.cpp
